--- a/css/styles.css
+++ b/css/styles.css
@@ -296,6 +296,27 @@ img {
   padding: 32px 0 32px;
 }
 
+.social-media {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.social-media-list {
+  width: 40px;
+  height: 40px;
+}
+
+.instagram {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 /*FOOTER*/
 .footer {
   background-color: var(--navy-blue);
@@ -349,7 +370,7 @@ img {
 
 .portfolio-lists-two {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
   gap: 24px;
 }
 
