--- a/css/styles.css
+++ b/css/styles.css
@@ -255,7 +255,7 @@ img {
 /*SECTION-4*/
 .section-four {
   background-color: var(--cloud);
-  padding: 120px 0 120px;
+  padding: 120px 0;
 }
 
 .team {
@@ -265,11 +265,10 @@ img {
 }
 
 .team-list {
+  height: 428px;
+  flex-basis: calc((100% - 72px) / 4);
   background-color: var(--white);
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
+  border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -293,7 +292,8 @@ img {
 }
 
 .employee {
-  padding: 32px 0 32px;
+  padding: 32px 0;
+  text-align: center;
 }
 
 .social-media {
@@ -315,6 +315,15 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.social-media-icon {
+  fill: #f4f4fd;
+}
+
+.social-media-link:hover,
+.social-media-link:focus {
+  background-color: #404bbf;
 }
 
 /*FOOTER*/
