--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ img {
 .list {
   list-style-type: none;
   display: flex;
-  padding-left: 15px;
+  padding-left: 0;
 }
 
 .menu:hover,
@@ -266,7 +266,7 @@ img {
 }
 
 .team-list {
-  height: 428px;
+  height: 100%;
   flex-basis: calc((100% - 72px) / 4);
   background-color: var(--white);
   border-radius: 0px 0px 4px 4px;
@@ -388,6 +388,35 @@ img {
   letter-spacing: 0.02em;
   color: var(--white);
   margin-bottom: 16px;
+}
+
+.socmed-footer-list {
+  display: flex;
+  gap: 16px;
+}
+
+.socmed-footer {
+  width: 40px;
+  height: 40px;
+}
+
+.socmed-footer-link {
+  width: 100%;
+  height: 100%;
+  background-color: var(--iris);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.socmed-footer-link:hover,
+.socmed-footer-link:focus {
+  background-color: var(#31d0aa);
+}
+
+.footer-svg {
+  fill: var(--cloud);
 }
 
 /* PORTFOLIO */
