--- a/css/styles.css
+++ b/css/styles.css
@@ -467,6 +467,8 @@ img {
   background-color: var(--ocean);
   cursor: pointer;
   border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-lists-two {
