--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,24 @@ img {
   display: flex;
   gap: 40px;
   padding: 24px 0 24px;
+  position: relative;
+}
+
+.div-header ul li a::after {
+  color: var(--ocean);
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: var(--ocean);
+  border-radius: 2px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.list-1 a,
+.list-2 a {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link {
